k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sap-web
  namespace: sap-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sap-web
  template:
    metadata:
      labels:
        app: sap-web
    spec:
      containers:
      - name: sap-web
        image: us-central1-docker.pkg.dev/<PROJECT-ID>/sap-repo/sap-web:v1
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
