k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sap-api-service
  namespace: sap-demo
spec:
  type: ClusterIP
  selector:
    app: sap-api
  ports:
  - port: 80
    targetPort: 5000
