k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sap-web-service
  namespace: sap-demo
spec:
  type: ClusterIP
  selector:
    app: sap-web
  ports:
  - port: 80
    targetPort: 5000
